# tracely

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: .env.example  Dockerfile  Dockerfile.production  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 27d09e1958e9_initial_empty_migration.py  5f395bf56f87_create_org_members_table.py  a1b2c3d4e5f6_create_invitations_table.py  a873feda874e_create_users_table.py  b1c2d3e4f5a6_create_refresh_tokens_table.py  b2c3d4e5f6a7_add_password_reset_to_users.py  c1a2b3d4e5f6_create_projects_table.py  c3d4e5f6a7b8_create_alert_rules_table.py  d1c746136d2f_create_organizations_table.py  d2b3c4e5f6a7_create_api_keys_table.py  d4e5f6a7b8c9_create_alert_events_table.py  e3c4d5f6a7b8_add_onboarding_completed_to_users.py  e5f6a7b8c9d0_create_notification_channels_table.py  f4a5b6c7d8e9_add_email_verification_to_users.py  f6a7b8c9d0e1_add_rule_snapshot_to_alert_events.py
api/app/: config.py  dependencies.py  main.py
api/app/db/: clickhouse.py  postgres.py  redis.py
api/app/models/: alert_event.py  alert_rule.py  api_key.py  invitation.py  notification_channel.py  org_member.py  organization.py  project.py  refresh_token.py  user.py
api/app/routers/: alerts.py  api_keys.py  auth.py  dashboard.py  health.py  ingest.py  invitations.py  members.py  notifications.py  organizations.py  projects.py  spans.py  stream.py
api/app/schemas/: alert.py  api_key.py  auth.py  dashboard.py  invitation.py  member.py  notification.py  organization.py  project.py  span.py  stream.py
api/tests/: conftest.py
(+230 files in other folders)
