[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracely-api"
version = "0.1.0"
description = "TRACELY API — monitoring backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "clickhouse-connect>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "redis>=5.0",
    "email-validator>=2.0",
    "opentelemetry-proto>=1.20",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
